# axum-skeleto-rs

./: Cargo.toml  README.md
src/: core.rs  error.rs  frontend.rs  main.rs  settings.rs  utils.rs
